--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@
 .add-item-text {
   font-size: 18px;
   height: 40px;
-  width: 84%;
+  width: 88%;
   padding: 15px;
   border-radius: 6px;
   border: 1px solid #eee;
